--- a/docs/4_示例_demo/1_组件_component/1_内置组件.md
+++ b/docs/4_示例_demo/1_组件_component/1_内置组件.md
@@ -1,8 +1,6 @@
-# Vue 示例
+# 内置组件
 
-vue 示例
-
-# 团队页
+## 团队成员（VPTeamMembers）
 
 <script setup>
 import { VPTeamMembers } from 'vitepress/theme'
@@ -19,9 +17,5 @@ const members = [
   },
 ]
 </script>
-
-# Our Team
-
-Say hello to our awesome team.
 
 <VPTeamMembers size="small" :members="members" />
