--- a/docs/4_示例_demo/1_组件_component/2_文档撰写.md
+++ b/docs/4_示例_demo/1_组件_component/2_文档撰写.md
@@ -120,7 +120,8 @@ export default {
 
 <<< ../../../src/utils/index.ts
 
-<<< ../../../src/utils/index.ts{highlightLines}
+<!-- 会抛出警告：The language 'highlightlines' is not loaded, falling back to 'txt' for syntax highlighting. 故暂时弃用 -->
+<!-- <<< ../../../src/utils/index.ts{highlightLines} -->
 
 <<< ../../../src/utils/index.ts{2}
 
