feat: 字典管理调整

--- a/_文件目录结构说明.md
+++ b/_文件目录结构说明.md
@@ -36,7 +36,7 @@
   │   ├── dict // 全局字典管理
   │   ├── enums // 全局Ts枚举管理（可能会移除）
   │   ├── hooks //全局hooks
-  │   ├── languages // 全局国际化处理（汇总各个模块的_langs文件夹内容）
+  │   ├── langs // 全局国际化处理（汇总各个模块的_langs文件夹内容）
   │   ├── layout // 页面布局中心
   │   ├── router // 路由管理中心
   │   ├── services // 全局服务层中心（后续可能会改动）
