--- a/docs/1_指南_guide/0_前言_say/0_0819分享.md
+++ b/docs/1_指南_guide/0_前言_say/0_0819分享.md
@@ -36,7 +36,7 @@
 （3）完全继承：  
 （4）多级配置：子类覆盖父类  
 （5）逻辑解耦：  
-<1> 一个组件只做一件事：BaseForm、SectionForm、StepForm、BaseTable、EditTable、……  
+<1> 一个组件只做一件事：BaseForm、SectionForm、StepForm、BaseTable、FormTable、……  
 <2> 弹窗跟弹窗内部内容解耦：  
 （6）工程移植性：自定义一套 scss 变量，方便工程移植和快速上手
 
