--- a/_0819分享.md
+++ b/_0819分享.md
@@ -56,7 +56,7 @@
 4、表单：  
 （1）默认配置：placeholder、clearable、showWordLimit、required、……  
 （2）字段单双 prop：  
-（3）内置表单校验规则：{rulesType: 'phone'} //password、age、……  
+（3）内置表单项模板规则：{tpl: 'phone'} //password、age、……  
 （4）整合 popover  
 （5）表单提交防抖处理（防重复提交）  
 （6）next 回调  
