--- a/docs/1_指南_guide/9_其他杂记_other/2_文档生成.md
+++ b/docs/1_指南_guide/9_其他杂记_other/2_文档生成.md
@@ -17,3 +17,15 @@
   "tsPath": "/src/core/components/BaseIcon.vue" // 文档中的ts类型声明呈现内容的来源出处
 }
 ```
+
+4、vue 文件注释
+
+```vue
+<!-- summary 这是标题
+  这是描述信息
+  这是描述信息1
+  @notice {tip} 这是tip信息示例
+  @notice {warning} 这是warning信息示例
+  @notice {danger} 这是danger信息示例
+-->
+```
