feat: 更改属性名称popover为explain

--- a/_0819分享.md
+++ b/_0819分享.md
@@ -57,7 +57,7 @@
 （1）默认配置：placeholder、clearable、showWordLimit、required、……  
 （2）字段单双 prop：  
 （3）内置表单项模板规则：{tpl: 'phone'} //password、age、……  
-（4）整合 popover  
+（4）整合 explain  
 （5）表单提交防抖处理（防重复提交）  
 （6）next 回调  
 （7）响应式栅格布局（grid）：  
@@ -66,10 +66,10 @@
 （1）内置组件：BaseTag、BaseCopy、BaseText、BaseImg、BaseTag、……  
 （2）内嵌组件：UserInfo、……  
 （3）无需设置列宽：备注、时间、操作栏等都设有默认宽度……  
-（4）整合 popover：  
+（4）整合 explain：  
 6、增删改查  
 （1）未联调提示（标红处理）：  
-（2）整合表格头 popover：  
+（2）整合表格头 explain：  
 （3）操作栏按钮自动展示更多下拉按钮、自动计算列宽：  
 （4）统一处理空占位符：用 '-' 表示
 7、工程级处理  
